# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  demo.cast  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  python-app.yml
gendiff/: __init__.py  cli.py  diff_generator.py  file_reader.py  gendiff.py  scripts.py
gendiff/formatters/: json_formatter.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  find_diff.py  gendiff.py  parser.py  scripts.py
tests/: test_gendiff.py  test_gendiff_nested.py
tests/fixtures/: expected_result_nested.json
