[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Viktoriya Dzhoruhova <viktodzho@gmail.com>"]
readme = "README.md"

packages = [
    { include = "gendiff" }
]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.2"
pytest = "^8.3.3"

[tool.poetry.scripts]
gendiff = "gendiff.gendiff:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
